use different colors
Signed-off-by: Alexander Alemayhu <alexander@alemayhu.com>

--- a/public/app.css
+++ b/public/app.css
@@ -7,10 +7,15 @@ textarea {
   font-size: 11pt;
 }
 
-a {
-  color: red;
-}
-
 #download {
   padding: 12px;
+}
+
+body {
+  background: #1b2f43;
+  color: #fff;
+}
+
+a {
+  color: red;
 }
